# Argument-Parser

./: .gitignore  CMakeLists.txt  Parser.cpp  Parser.hpp  README.md  Util.cpp  Util.hpp  compileExe  compileLib  compileLibs  documentation.md  installLibs  prepareRelease
test/: compileNrun  free.cpp  parser.cpp  types.cpp
